--- a/buildspecs/quality-check.yaml
+++ b/buildspecs/quality-check.yaml
@@ -8,11 +8,13 @@ env:
 phases:
   install:
     runtime-versions:
-      nodejs: 20
+      nodejs: 14
 
     commands:
       - echo Updating and Installing system dependencies...
       - apt-get update -y -q
+      - apt-get install -y fonts-liberation libasound2 libatk1.0-0 libcups2 libgbm1 libgtk-3-0 libvulkan1 libxcomposite1 libxdamage1 libxkbcommon0 libxrandr2 xdg-utils
+
 
       - echo Installing Google Chrome for testing
       - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
