--- a/buildspecs/quality-check.yaml
+++ b/buildspecs/quality-check.yaml
@@ -13,8 +13,7 @@ phases:
     commands:
       - echo Updating and Installing system dependencies...
       - apt-get update -y -q
-      - apt-get install -y fonts-liberation libasound2 libatk1.0-0 libcups2 libgbm1 libgtk-3-0 libvulkan1 libxcomposite1 libxdamage1 libxkbcommon0 libxrandr2 xdg-utils
-
+      - apt-get install -y fonts-liberation libasound2 libatk1.0-0 libcups2 libgbm1 libgtk-3-0 libvulkan1 libxcomposite1 libxdamage1 libxkbcommon0 libxrandr2 xdg-utils libu2f-udev
 
       - echo Installing Google Chrome for testing
       - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
